# VIPRecon

./: .gitignore  .pyre_configuration  CREDITS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
config/: default_config.yaml  fingerprints.json  waf_signatures.json
config/wordlists/: api_paths.txt  common_dirs.txt  subdomains.txt
docs/: DEVELOPER.md  USAGE.md  VULNERABILITIES.md
src/: __init__.py
src/cli/: argument_parser.py  interactive.py  output_formatter.py  progress.py
src/core/: exceptions.py  http_client.py  models.py  orchestrator.py  rate_limiter.py
src/modules/: api_discovery.py  basic_info.py  cors_checker.py  directory_brute.py  fingerprinting.py  js_analyzer.py  port_scanner.py  security_headers.py  subdomain_enum.py  vuln_scanner.py  waf_detector.py
src/reports/: html_report.py  json_report.py  report_manager.py
src/reports/templates/: report_template.html
src/utils/: config_loader.py  diff_engine.py  logger.py  notifications.py  validators.py
tests/: __init__.py  conftest.py  test_fingerprinting.py  test_rate_limiter.py  test_report_manager.py  test_validators.py  test_waf_detector.py
