[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viprecon"
version = "1.1.0"
description = "Professional Web Application Reconnaissance and Security Testing Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "viphacker100 (Aryan Ahirwar)", email = "viphacker.100.org@gmail.com"}
]
keywords = ["security", "reconnaissance", "web", "scanner", "penetration-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0",
    "colorama>=0.4.6",
    "dnspython>=2.3.0",
    "Jinja2>=3.1.0",
    "lxml>=4.9.0",
    "python-whois>=0.8.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "validators>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/viphacker100/viprecon"
Documentation = "https://github.com/viphacker100/viprecon/blob/main/README.md"
Repository = "https://github.com/viphacker100/viprecon"
Issues = "https://github.com/viphacker100/viprecon/issues"

[project.scripts]
viprecon = "main:main"

[tool.setuptools]
packages = ["src", "src.cli", "src.core", "src.modules", "src.reports", "src.utils"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = false
ignore_missing_imports = true

[tool.pyre]
source_directories = ["."]
search_path = ["."]
declare = false
strict = false
include = ["src/**/*.py", "main.py", "tests/**/*.py"]
python_version = "3.13"
site_package_path = []
